--- a/activities/index.html
+++ b/activities/index.html
@@ -125,7 +125,8 @@
                     </div>
                     <div class="mt-4">
                         <a href="activity1/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">Start Activity</a>
-                        <a href="../games/ta-dashboard.html" class="inline-block bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-700">TA Dashboard</a>
+                        <a href="activity1/ta-dashboard.html" class="inline-block bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-700 mr-2">TA Dashboard</a>
+                        <a href="Discussion_Activity_1.pdf" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700" target="_blank"><i class="fas fa-file-pdf mr-1"></i> PDF</a>
                     </div>
                 </div>
             </div>
@@ -145,7 +146,8 @@
                     </div>
                     <div class="mt-4">
                         <a href="activity2/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">Start Activity</a>
-                        <a href="../games/ta-dashboard.html" class="inline-block bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-700">TA Dashboard</a>
+                        <a href="activity2/ta-dashboard.html" class="inline-block bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-700 mr-2">TA Dashboard</a>
+                        <a href="Discussion_Activity_2.pdf" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700" target="_blank"><i class="fas fa-file-pdf mr-1"></i> PDF</a>
                     </div>
                 </div>
             </div>
@@ -166,7 +168,8 @@
                     </div>
                     <div class="mt-4">
                         <a href="activity3/index.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">Start Activity</a>
-                        <a href="../games/ta-dashboard.html" class="inline-block bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-700">TA Dashboard</a>
+                        <a href="activity3/ta-dashboard.html" class="inline-block bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-700 mr-2">TA Dashboard</a>
+                        <a href="Discussion_Activity_3.pdf" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700" target="_blank"><i class="fas fa-file-pdf mr-1"></i> PDF</a>
                     </div>
                 </div>
             </div>
