size git commit -m size

--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -221,7 +221,7 @@
                                 </div>
                                 <hr style="margin: 0.5rem 0;">
                                 <div class="d-flex justify-content-between">
-                                    <button id="buy-all-btn" class="btn btn-success btn-sm">Buy All Assets</button>
+                                    <button id="buy-all-btn" class="btn btn-success btn-sm">Distribute Cash Evenly</button>
                                     <button id="sell-all-btn" class="btn btn-danger btn-sm">Sell All Assets</button>
                                 </div>
                             </div>
@@ -263,7 +263,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-8">
-                                <div style="height: 300px; width: 100%; position: relative;">
+                                <div style="height: 400px; width: 100%; position: relative;">
                                     <canvas id="market-pulse-chart"></canvas>
                                     <button id="reset-market-pulse-zoom" class="btn btn-sm btn-secondary" style="position: absolute; top: 10px; right: 10px;">Reset Zoom</button>
                                 </div>
