--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -66,6 +66,7 @@
                             <div>
                                 <button id="start-game" class="btn btn-success">Start Game</button>
                                 <button id="next-round" class="btn btn-warning ml-2">Next Round <i class="fas fa-arrow-right"></i></button>
+                                <button id="restart-game" class="btn btn-danger ml-2">Start Over <i class="fas fa-redo"></i></button>
                             </div>
                         </div>
                         <div class="progress mt-2">
