--- a/activities/index.html
+++ b/activities/index.html
@@ -91,25 +91,8 @@
 
     <!-- Main Content -->
     <main class="container mx-auto py-8 px-4">
-        <!-- Investment Odyssey Game -->
-        <div class="bg-white rounded-lg shadow-md overflow-hidden mb-8">
-            <div class="h-2 bg-purple-600"></div>
-            <div class="p-6">
-                <div class="flex flex-col md:flex-row items-center justify-between">
-                    <div class="mb-4 md:mb-0">
-                        <h2 class="text-2xl font-medium mb-2">Investment Odyssey</h2>
-                        <p class="text-gray-600">Practice your investment skills in this interactive simulation game</p>
-                    </div>
-                    <a href="investment-odyssey/index.html" class="flex items-center bg-purple-600 hover:bg-purple-700 text-white font-medium py-3 px-6 rounded-lg transition-colors">
-                        <i class="fas fa-chart-line mr-2"></i>
-                        Play Investment Odyssey
-                    </a>
-                </div>
-            </div>
-        </div>
-
         <!-- Activity Cards -->
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-8">
             <!-- Activity 1 Card -->
             <div class="bg-white rounded-lg shadow-md overflow-hidden">
                 <div class="h-2 bg-blue-600"></div>
@@ -171,6 +154,23 @@
                         <a href="activity3/ta-dashboard.html" class="inline-block bg-teal-600 text-white px-4 py-2 rounded hover:bg-teal-700 mr-2">TA Dashboard</a>
                         <a href="Discussion_Activity_3.pdf" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700" target="_blank"><i class="fas fa-file-pdf mr-1"></i> PDF</a>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Investment Odyssey Game -->
+        <div class="bg-white rounded-lg shadow-md overflow-hidden mb-8">
+            <div class="h-2 bg-purple-600"></div>
+            <div class="p-6">
+                <div class="flex flex-col md:flex-row items-center justify-between">
+                    <div class="mb-4 md:mb-0">
+                        <h2 class="text-2xl font-medium mb-2">Investment Odyssey</h2>
+                        <p class="text-gray-600">Practice your investment skills in this interactive simulation game</p>
+                    </div>
+                    <a href="investment-odyssey/index.html" class="flex items-center bg-purple-600 hover:bg-purple-700 text-white font-medium py-3 px-6 rounded-lg transition-colors">
+                        <i class="fas fa-chart-line mr-2"></i>
+                        Play Investment Odyssey
+                    </a>
                 </div>
             </div>
         </div>
