--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="../../styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+    <!-- Chart.js and Chart.js Zoom plugin -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
+
     <style>
         /* Sticky Next Round Button */
         .sticky-button-container {
