--- a/activities/index.html
+++ b/activities/index.html
@@ -81,7 +81,8 @@
     <img src="../images/banner10.png" alt="Banner" class="banner-image">
     <div class="banner-overlay">
       <div class="flex items-center mb-2">
-        <a href="../index.html" class="back-link">← Back to Home</a>
+        <a href="../index.html" class="back-link mr-4">← Back to Home</a>
+        <a href="../games.html" class="back-link">← Games Home</a>
       </div>
       <h1 class="page-title">Discussion Activities</h1>
       <p class="page-subtitle">Weekly discussion section materials and exercises</p>
@@ -158,19 +159,34 @@
             </div>
         </div>
 
-        <!-- Investment Odyssey Game -->
-        <div class="bg-white rounded-lg shadow-md overflow-hidden mb-8">
-            <div class="h-2 bg-purple-600"></div>
-            <div class="p-6">
+        <!-- Games Section -->
+        <h2 class="text-2xl font-semibold mt-12 mb-6">Economics Games</h2>
+        <div class="bg-gradient-to-r from-purple-600 to-indigo-600 rounded-lg shadow-lg overflow-hidden mb-8 text-white">
+            <div class="p-8">
                 <div class="flex flex-col md:flex-row items-center justify-between">
-                    <div class="mb-4 md:mb-0">
-                        <h2 class="text-2xl font-medium mb-2">Investment Odyssey</h2>
-                        <p class="text-gray-600">Practice your investment skills in this interactive simulation game</p>
+                    <div class="mb-6 md:mb-0 text-center md:text-left">
+                        <h2 class="text-3xl font-bold mb-3">Investment Odyssey</h2>
+                        <p class="text-white text-opacity-90 text-lg mb-4">Navigate financial markets and build your investment portfolio in this interactive simulation game</p>
+                        <div class="flex flex-wrap gap-2 justify-center md:justify-start">
+                            <span class="text-xs px-3 py-1 rounded-full bg-white bg-opacity-20 text-white">Investment Strategies</span>
+                            <span class="text-xs px-3 py-1 rounded-full bg-white bg-opacity-20 text-white">Financial Markets</span>
+                            <span class="text-xs px-3 py-1 rounded-full bg-white bg-opacity-20 text-white">Risk Management</span>
+                        </div>
                     </div>
-                    <a href="investment-odyssey/index.html" class="flex items-center bg-purple-600 hover:bg-purple-700 text-white font-medium py-3 px-6 rounded-lg transition-colors">
-                        <i class="fas fa-chart-line mr-2"></i>
-                        Play Investment Odyssey
-                    </a>
+                    <div class="flex flex-col sm:flex-row gap-3">
+                        <a href="investment-odyssey/about.html" class="flex items-center justify-center bg-white text-purple-700 hover:bg-gray-100 font-bold py-3 px-6 rounded-lg transition-colors">
+                            <i class="fas fa-chart-line mr-2"></i>
+                            Play Investment Odyssey
+                        </a>
+                        <a href="investment-odyssey/index.html" class="flex items-center justify-center bg-white bg-opacity-20 hover:bg-opacity-30 text-white font-medium py-3 px-6 rounded-lg border border-white border-opacity-30 transition-colors">
+                            <i class="fas fa-play-circle mr-2"></i>
+                            Start Game
+                        </a>
+                        <a href="../games.html" class="flex items-center justify-center bg-purple-500 bg-opacity-50 hover:bg-opacity-70 text-white font-medium py-3 px-6 rounded-lg border border-white border-opacity-30 transition-colors">
+                            <i class="fas fa-gamepad mr-2"></i>
+                            Games Home
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
