--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -88,6 +88,7 @@
                     <div class="nav-links">
                         <a href="../../index.html" class="nav-link">← Back to Course Home</a>
                         <a href="../index.html" class="nav-link">← Back to Activities</a>
+                        <a href="about.html" class="nav-link">About the Game</a>
                     </div>
                     <h1 class="activity-title">Investment Odyssey</h1>
                     <p class="activity-date">Practice your investment skills in this simulation</p>
