--- a/games.html
+++ b/games.html
@@ -126,6 +126,9 @@
                                     <button id="guest-btn" class="btn btn-secondary">Continue as Guest</button>
                                 </div>
                                 <div id="auth-error" class="text-danger mt-2"></div>
+                                <div class="mt-3 text-center">
+                                    <a href="ta-admin.html" class="text-primary">TA Sign In</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -140,13 +143,12 @@
                 <!-- Investment Odyssey -->
                 <div class="col-md-8">
                     <div class="card game-card">
-                        <img src="images/investment.jpg" class="card-img-top game-image" alt="Investment Odyssey">
+                        <img src="images/banner15.png" class="card-img-top game-image" alt="Investment Odyssey">
                         <div class="card-body text-center">
                             <h5 class="card-title">Investment Odyssey</h5>
                             <p class="card-text">Navigate financial markets and build your investment portfolio in this interactive simulation game. Learn about different asset classes, risk management, and investment strategies.</p>
-                            <div class="d-flex flex-column flex-sm-row justify-content-center mt-3">
-                                <a href="activities/investment-odyssey/about.html" class="btn btn-primary btn-lg mb-2 mb-sm-0 mr-sm-2">Play Investment Odyssey</a>
-                                <a href="activities/investment-odyssey/index.html" class="btn btn-outline-primary btn-lg">Start Game</a>
+                            <div class="mt-3">
+                                <a href="activities/investment-odyssey/about.html" class="btn btn-primary btn-lg">Play Investment Odyssey</a>
                             </div>
                         </div>
                     </div>
