--- a/ta-admin.html
+++ b/ta-admin.html
@@ -111,6 +111,12 @@
                                 <button id="admin-login-btn" class="btn btn-secondary">Login as Admin</button>
                                 <div id="admin-error" class="text-danger mt-2"></div>
                             </div>
+                            <hr>
+                            <div class="mt-3">
+                                <h5>Manual Setup</h5>
+                                <p>Having trouble with initialization? Try the manual setup:</p>
+                                <a href="manual-ta-setup.html" class="btn btn-info">Manual TA Setup</a>
+                            </div>
                         </div>
                     </div>
                 </div>
