--- a/games.html
+++ b/games.html
@@ -127,7 +127,8 @@
                                 </div>
                                 <div id="auth-error" class="text-danger mt-2"></div>
                                 <div class="mt-3 text-center">
-                                    <a href="ta-admin.html" class="text-primary">TA Sign In</a>
+                                    <a href="ta-admin.html" class="text-primary mr-3">TA Sign In</a>
+                                    <a href="manual-ta-setup.html" class="text-info">Manual TA Setup</a>
                                 </div>
                             </div>
                         </div>
