--- a/games.html
+++ b/games.html
@@ -128,7 +128,7 @@
                                 <div id="auth-error" class="text-danger mt-2"></div>
                                 <div class="mt-3 text-center">
                                     <a href="ta-admin.html" class="text-primary mr-3">TA Sign In</a>
-                                    <a href="manual-ta-setup.html" class="text-info">Manual TA Setup</a>
+                                    <a href="initialize-database.html" class="text-info">Initialize Database</a>
                                 </div>
                             </div>
                         </div>
