--- a/ta-admin.html
+++ b/ta-admin.html
@@ -113,9 +113,9 @@
                             </div>
                             <hr>
                             <div class="mt-3">
-                                <h5>Manual Setup</h5>
-                                <p>Having trouble with initialization? Try the manual setup:</p>
-                                <a href="manual-ta-setup.html" class="btn btn-info">Manual TA Setup</a>
+                                <h5>Database Setup</h5>
+                                <p>Need to initialize the database with TAs and sections?</p>
+                                <a href="initialize-database.html" class="btn btn-info">Initialize Database</a>
                             </div>
                         </div>
                     </div>
