--- a/initialize-database.html
+++ b/initialize-database.html
@@ -24,20 +24,20 @@
 
                         <div class="mb-4">
                             <div class="list-group">
-                                <a href="manual-ta-setup.html" class="list-group-item list-group-item-action">
-                                    <div class="d-flex w-100 justify-content-between">
-                                        <h5 class="mb-1">Manual Setup (Recommended)</h5>
-                                        <small class="text-success">Works with GitHub Pages</small>
-                                    </div>
-                                    <p class="mb-1">Manually add TAs and sections one by one using a form interface. This method works with GitHub Pages.</p>
-                                </a>
-
                                 <a href="direct-init-tas.html" class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
-                                        <h5 class="mb-1">Direct Initialization</h5>
+                                        <h5 class="mb-1">Automatic Setup (Recommended)</h5>
+                                        <small class="text-success">One-Click Solution</small>
+                                    </div>
+                                    <p class="mb-1">Automatically add all TAs and sections with a single click. This method is fast, reliable, and works with GitHub Pages.</p>
+                                </a>
+
+                                <a href="manual-ta-setup.html" class="list-group-item list-group-item-action">
+                                    <div class="d-flex w-100 justify-content-between">
+                                        <h5 class="mb-1">Manual Setup</h5>
                                         <small class="text-info">Alternative</small>
                                     </div>
-                                    <p class="mb-1">Uses direct Firebase calls to initialize the database.</p>
+                                    <p class="mb-1">Manually add TAs and sections one by one using a form interface. Use this if you need to customize the data.</p>
                                 </a>
 
                                 <a href="init-ta-sections.html" class="list-group-item list-group-item-action">
