--- a/activities/activity2/index.html
+++ b/activities/activity2/index.html
@@ -186,14 +186,14 @@
             <div class="space-y-6">
                 <div>
                     <h3 class="text-lg font-medium mb-2">Objective</h3>
-                    <p class="mb-4">In this activity, you and your group (of 2 to 3) will create your own well-being index to measure economic prosperity beyond traditional Gross Domestic Product (GDP) measures.</p>
+                    <p class="mb-4">In this activity, you and/or your group (of 2 to 3) will create your own well-being index to measure economic prosperity beyond traditional Gross Domestic Product (GDP) measures.</p>
                     <p>While GDP is the most common measure of economic well-being, it fails to capture many important aspects of human welfare. This activity will help you understand the limitations of GDP and explore alternative measures.</p>
                 </div>
                 
                 <div class="p-4 bg-blue-50 rounded-lg mb-4">
                     <h3 class="text-lg font-medium mb-2">Activity Overview</h3>
                     <ol class="list-decimal pl-5 space-y-1">
-                        <li>First, work with 1-3 peers to form a group</li>
+                        <li>First, work with 0-2 peers to form a group</li>
                         <li>Explore GDP per Capita and the Human Development Index (HDI)</li>
                         <li>Create your own well-being index by selecting variables and weights</li>
                         <li>Compare your index with those created by your classmates and an AI</li>
