--- a/initialize-database.html
+++ b/initialize-database.html
@@ -24,12 +24,20 @@
 
                         <div class="mb-4">
                             <div class="list-group">
+                                <a href="simple-init.html" class="list-group-item list-group-item-action">
+                                    <div class="d-flex w-100 justify-content-between">
+                                        <h5 class="mb-1">Simple Initialization (Recommended)</h5>
+                                        <small class="text-success">Most Reliable</small>
+                                    </div>
+                                    <p class="mb-1">A simplified approach to add all TAs and sections. This method is the most reliable and works with GitHub Pages.</p>
+                                </a>
+
                                 <a href="direct-init-tas.html" class="list-group-item list-group-item-action">
                                     <div class="d-flex w-100 justify-content-between">
-                                        <h5 class="mb-1">Automatic Setup (Recommended)</h5>
-                                        <small class="text-success">One-Click Solution</small>
+                                        <h5 class="mb-1">Automatic Setup</h5>
+                                        <small class="text-info">Alternative</small>
                                     </div>
-                                    <p class="mb-1">Automatically add all TAs and sections with a single click. This method is fast, reliable, and works with GitHub Pages.</p>
+                                    <p class="mb-1">Automatically add all TAs and sections with a single click. Try this if the simple method doesn't work.</p>
                                 </a>
 
                                 <a href="manual-ta-setup.html" class="list-group-item list-group-item-action">
