--- a/games.html
+++ b/games.html
@@ -101,17 +101,23 @@
                 <div class="col-md-6 offset-md-3">
                     <div class="card">
                         <div class="card-header bg-primary text-white">
-                            <h3 class="mb-0">Sign In or Register</h3>
+                            <h3 class="mb-0">Student Sign In</h3>
                         </div>
                         <div class="card-body">
                             <!-- Authentication Status -->
                             <div id="auth-status" class="alert alert-success mb-3 d-none">
                                 <p>Signed in as: <span id="current-user-name">Student Name</span></p>
-                                <button id="logout-btn" class="btn btn-sm btn-outline-secondary">Logout</button>
+                                <div class="d-flex justify-content-between align-items-center mt-2">
+                                    <a href="select-section.html" class="btn btn-sm btn-info">Change TA Section</a>
+                                    <button id="logout-btn" class="btn btn-sm btn-outline-secondary">Logout</button>
+                                </div>
                             </div>
 
                             <!-- Authentication Form -->
                             <div id="auth-form">
+                                <div class="alert alert-info">
+                                    <p class="mb-0"><strong>Students:</strong> Sign in or register to access the games. You'll be able to select your TA section after signing in.</p>
+                                </div>
                                 <div class="form-group">
                                     <label for="student-name">Your Name</label>
                                     <input type="text" id="student-name" class="form-control" placeholder="Enter your name">
@@ -119,6 +125,7 @@
                                 <div class="form-group">
                                     <label for="student-passcode">Passcode</label>
                                     <input type="password" id="student-passcode" class="form-control" placeholder="Enter your passcode">
+                                    <small class="form-text text-muted">If registering, create a passcode you'll remember.</small>
                                 </div>
                                 <div class="d-flex justify-content-between">
                                     <button id="login-btn" class="btn btn-primary">Sign In</button>
@@ -126,9 +133,11 @@
                                     <button id="guest-btn" class="btn btn-secondary">Continue as Guest</button>
                                 </div>
                                 <div id="auth-error" class="text-danger mt-2"></div>
-                                <div class="mt-3 text-center">
-                                    <a href="ta-admin.html" class="text-primary mr-3">TA Sign In</a>
-                                    <a href="initialize-database.html" class="text-info">Initialize Database</a>
+                                <hr>
+                                <div class="mt-3">
+                                    <h5>Teaching Assistants</h5>
+                                    <p>TAs should sign in using the TA portal:</p>
+                                    <a href="ta-admin.html" class="btn btn-outline-primary">TA Sign In Portal</a>
                                 </div>
                             </div>
                         </div>
