--- a/select-section.html
+++ b/select-section.html
@@ -102,6 +102,7 @@
                     <div class="alert alert-info">
                         <p>Welcome, <span id="student-name">Student</span>! Please select your TA section below.</p>
                         <p id="current-section-info" class="mb-0 font-weight-bold"></p>
+                        <div id="message-container" class="mt-3"></div>
                     </div>
                 </div>
             </div>
@@ -150,7 +151,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="js/firebase-auth-config.js"></script>
     <script src="js/select-section.js"></script>
-    
+
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
